# sevenzip-sys

./: .gitmodules  Cargo.toml  LICENSE  README.MD  README.md  build.rs  wrapper.h
benches/: lzma_benchmark.rs
precompiled-asm/: readme.md
src/: lib.rs
