[package]
name = "lzma-sdk-sys"
version = "0.1.1"
edition = "2021"
authors = [
    "Sewer56 <admin@sewer56.dev>",
    # Inspired by, Julia DeMille <me@jdemille.com> , but rewritten since
]
license = "MIT"
description = "Raw FFI bindings for LZMA-SDK (7zip)"
repository = "https://github.com/Sewer56/lzma-sdk-sys.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.71.0"
cc = "1.0"
glob = "0.3"
