[package]
name = "lzma-sdk-sys"
version = "0.1.0"
edition = "2021"
authors = ["Sewer56 <admin@sewer56.dev>"]
license = "MIT"
description = "Raw FFI bindings for the LZMA encoder/decoder parts of LZMA-SDK (7zip)"
repository = "https://github.com/Sewer56/lzma-sdk-sys.git"
readme = "README.MD"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["external-codecs", "enable-asm"]  # Multithreaded by default

# Threading
st = []  # Single-threaded

# Compression features
large-pages = []  # Enable large pages support
long-paths = []  # Enable long path support
external-codecs = [] # Enable external codec support for 7z archive format

# For debugging builds
debug-build-logs = []
debug-build-script = []

# Enable Optimized Hand Rolled Assembly Routines
enable-asm = []

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
glob = "0.3"
regex = "1.11"

# [profile.dev.build-override]
# debug = true

[[bench]]
name = "lzma_benchmark"
harness = false